--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reacthelp",
   "main": "./lib/reacthelp",
   "version": "0.0.0",
-  "description": "A short description of your package",
+  "description": "A package that helps React example compatibility",
   "keywords": [
   ],
   "activationCommands": {
